src/index.css
@import url(https://fonts.googleapis.com/css?family=Raleway);
body {
  font-family: 'Raleway';
}

/* custom classes */

.sidebar {
  width: 250px;
  position: fixed;
  overflow-y: auto;
  height: 100vh;
  left: 0;
  top: 0;
}

.sidebar.closed {
  left: -250px;
}

.sidebar .suggestion-list {
  overflow-y: auto;
  max-height: calc(100vh - 101px);
}

.search-box {
  position: relative;
}

.clear-suggestion {
  position: absolute !important;
  right: 48px;
  top: 11px;
  bottom: 8px;
}

.loading-suggestion {
  position: absolute !important;
  right: 52px;
  bottom: 9px;
}

.suggestion-box {
  position: absolute;
  width: 100%;
  left: 0;
  top: 41px;
  z-index: 5;
}

.suggestion-box>div {
  border-radius: 0.5em;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-top: none;
}

.main {
  margin-left: 250px;
  min-height: 100vh;
}

.main.sidebar-closed {
  margin-left: 0;
}

.playlist-item {
  transition: all 0.4s;
  box-shadow: 0px 5px 15px 0px #aaa3;
}

.favorite-maker:hover {
  transition: all 0.4s;
  color: red;
}

.item-menu {
  position: absolute;
  right: 0;
  z-index: 4;
  min-width: 150px;
}

.player {
  background: radial-gradient(#aaa, #ddd, #fff0, #fff0);
}

.player-card {
  width: 300px;
  margin-left: auto;
  margin-right: auto;
  box-shadow: 3px 10px 15px 5px #0001;
}

.play-pause-overlay {
  background-color: #ddd1;
  transition: all 0.4s;
}

.play-button, .pause-button, .animated {
  transition: all 0.4s;
}

.slick-arrow.slick-prev {
  position: absolute;
  right: 50px;
  left: auto;
  top: -2rem;
}

.slick-arrow.slick-next {
  position: absolute;
  right: 20px;
  left: auto;
  top: -2rem;
}

.slick-next:before, .slick-prev:before {
  color: #aaa;
}

/* utility */

.text-xxs {
  font-size: .6rem;
}

.rounded-xl {
  border-radius: 2rem;
}

/* toastr */

.ToastNotifier {
  position: fixed;
  right: 1rem;
  bottom: 1rem;
}

.ToastNotifier .toast .toast-body {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.ToastNotifier .toast .toast-close-button {
  font-size: 1rem;
  padding: 6px;
}

.ToastNotifier .toast.default {
  background-color: #333;
}

.ToastNotifier .toast.success {
  background-color: #333;
}

.ToastNotifier .toast.info {
  background-color: dodgerblue;
}

.ToastNotifier .toast.warning {
  background-color: goldenrod;
}

.ToastNotifier .toast.danger {
  background-color: red;
}

.ToastNotifier>.toast>.toast-delete {
  display: block;
  width: 20px;
  color: #fffa;
  cursor: pointer;
  font-size: 1.5rem;
  text-align: center;
  margin-left: 1rem;
}

/* animations */

.spinner {
  display: block;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  border: 2px solid white;
  border-color: #a9a9a9 #202020 #a9a9a9 #a9a9a9;
  animation: spin 0.25s linear infinite;
}

/*  */

/* .beat-box { */

/*  */

/* } */

.heart-beat {
  transition: all 0.2s;
  animation: beat 0.5s linear infinite;
}

@keyframes beat {
  0% {
    transform: scale(1);
  }
  10% {
    transform: scale(0.9);
  }
  90% {
    transform: scale(1);
  }
  100% {
    transform: scale(0.9);
  }
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

@media only screen and (max-width: 720px) {
  .top-bar {
    position: fixed;
    z-index: 4;
    top: 0;
    left: 250px;
    right: 0;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
    background-color: white;
    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
  }
  .main.sidebar-closed .top-bar {
    left: 0;
  }
  .main {
    width: 100vw;
    padding-top: 55px;
  }
  .loading-suggestion {
    right: 10px;
  }
  .player {
    position: fixed;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    left: 0;
    right: 0;
    overflow: hidden;
    top: 100vh;
    bottom: -100vh;
    background-color: transparent;
    background-image: none;
  }
  .player.visible-on-mobile {
    top: 0;
    bottom: 0;
    background-color: #0003;
  }
  .search-box.focused {
    position: fixed;
    top: 0;
    bottom: 0;
    padding: 0.5rem;
    left: 0;
    z-index: 5;
    right: 0;
    background-color: #0003;
    align-items: flex-start;
  }
  .search-box.focused .loading-suggestion {
    right: 20px;
    top: 22px;
    top: 17px;
    bottom: auto;
  }
  .search-box.focused .clear-suggestion {
    right: 10px;
    top: 10px;
    bottom: auto;
  }
  .search-box.focused .suggestion-box {
    top: 49px;
    padding: 0 0.5rem;
  }
}

